done with ex03:

--- a/ex03/Makefile
+++ b/ex03/Makefile
@@ -32,7 +32,7 @@ clean:
 
 fclean: clean
 	@echo "Removing executable..."
-	@rm -f garden_shrubbery
+	@rm -f Forest_shrubbery
 	@rm -f $(NAME)
 
 re: fclean all
